k8s/company/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: company-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: company-backend

  template:
    metadata:
      labels:
        app: company-backend

    spec:
      containers:
        - name: backend
          image: rladmswlr/ex8-company-backend:latest
          ports:
            - containerPort: 8000
