k8s/company/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: company-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: company-frontend

  template:
    metadata:
      labels:
        app: company-frontend

    spec:
      containers:
        - name: frontend
          image: rladmswlr/ex8-company-frontend:latest
          ports:
            - containerPort: 80
