k8s/company/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: company-backend-service

spec:
  selector:
    app: company-backend

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
