k8s/company/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: company-frontend-service

spec:
  selector:
    app: company-frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
