k8s/company/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: company-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: company-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: company-frontend-service
                port:
                  number: 80
